--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&family=Megrim&display=swap" rel="stylesheet">
+    <link rel="preload" href="./src/assets/fonts/Inconsolata/Inconsolata-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./src/assets/fonts/Inconsolata/Inconsolata-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rememzo</title>
   </head>
