--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preload" href="./src/assets/fonts/Inconsolata/Inconsolata-Regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="./src/assets/fonts/Inconsolata/Inconsolata-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
